syntax = "proto3";
package Protocol;
//大协议号:1

//---------客户端到服务器---------------------------------------------------------
//------------c2s-------------
//c2s子协议号:1~登录
message C2SLogin {
  string account = 1; //账号
  string pwd = 2;     //密码
  int32 servernumber = 3;     //服务器区号
  string mac = 4; //机器mac
}

//-----------------------------------------------
//---------服务器到客户端---------------------------------------------------------
//-------------s2c--------------------------------
//s2c子协议号1--发送hello包,表示连接成功,您可以登录处理
message S2CHello {
  int32 randseed = 1; //客户端可以当做随机种子
  int32 servertime = 2; //服务器时间      
}
//s2c子协议号2
message S2CLoginSuccess {
    int64 id = 1; //玩家ID
    string name = 2; //玩家名字
    int32 servernumber = 3;//服务器区号
    int32 shape = 4; // 玩家造型
    int32 lv = 5; // 玩家等级
    int64 exp = 6; // 玩家经验
    int64 gold = 7; // 金币
    int64 gem = 8; // 钻石
    
	
}


